test/tests/stages/18_structures/invalid_types/extra_credit/union_struct_conflicts/union_shadowed_by_incomplete_struct.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(tag)
  {
  int
  identifier(a)
  ;
  }
  ;
  {
  struct
  identifier(tag)
  ;
  union
  identifier(tag)
  *
  identifier(x)
  ;
  }
  return
  const int(0)
  ;
  }
